# PSCR-TME

./: .gitignore
TME0/: exo1.cpp  meson.build
TME1/exo1/: meson.build
TME1/exo1/src/: List.cpp  List.h  main.cpp
TME2/: README.md  hashmap.h  iterator.h  main-tme3.cpp  main.cpp  meson.build
TME2/test/: tests.cpp
TME4/: README.md  meson.build
TME4/src/: Banque.cpp  Banque.h  Compte.cpp  Compte.h  main.cpp  meson.build
TME5/: meson.build
TME5/src/: Barrier.h  Job.h  Pool.h  Queue.h  main.cpp
TME6/: README.md  meson.build
TME6/src/: fight.cpp  fork_exo.cpp  wait.cpp
TME7/: README.md  meson.build
TME7/src/: Stack.h  chat_common.h  pipe.cpp  prod_cons.cpp
TME8/: meson.build
TME8/src/: Job.h  Pool.h  Queue.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  TCPServer.cpp  TCPServer.h  client.cpp  client_ftp.cpp  server2.cpp  server_ftp.cpp  utils_ftp.cpp  utils_ftp.h
